# mini_java_compiler

./: .gitignore  CMakeLists.txt  README.md  main.cpp
components/: base.h  class.h  components.h  formal.h  main_class.h  method_invocation.h  program.h
components/declaration/: declaration.h  method_declaration.h  variable_declaration.h
components/expression/: array_make_expression.h  binary_expression.h  expression.h  inverse_expression.h  length_expression.h  method_invocation_expression.h  number_expression.h  object_make_expression.h  simple_expression.h
components/statement/: assert_statement.h  if_else_statement.h  if_statement.h  local_variable_declaration_statement.h  method_invocation_statement.h  println_statement.h  return_statement.h  scope_statements.h  set_lvalue_statement.h  statement.h  while_statement.h
driver/: driver.cpp  driver.hh
error/: errors.cpp  errors.h
function-mechanisms/: frame.cpp  frame.h  frame_emulator.cpp  frame_emulator.h  frame_translator.cpp  frame_translator.h  function_storage.cpp  function_storage.h  function_table.cpp  function_table.h
function-mechanisms/address/: address.h  address_in_frame.cpp  address_in_frame.h  address_in_register.cpp  address_in_register.h
irtree/: CMakeLists.txt
irtree/generators/: label.cpp  label.h  registry.cpp  registry.h  temporary.cpp  temporary.h
irtree/helpers/: block.cpp  block.h  trace.cpp  trace.h
irtree/nodes/: base_element.h  expression_list.cpp  expression_list.h
irtree/nodes/expressions/: binop_expression.cpp  binop_expression.h  call_expression.cpp  call_expression.h  const_expression.cpp  const_expression.h  eseq_expression.cpp  eseq_expression.h  expression.h  mem_expression.cpp  mem_expression.h  name_expression.cpp  name_expression.h  temp_expression.cpp  temp_expression.h
irtree/nodes/statements/: exp_statement.cpp  exp_statement.h  jump_conditional_statement.cpp  jump_conditional_statement.h  jump_statement.cpp  jump_statement.h  label_statement.cpp  label_statement.h  move_statement.cpp  move_statement.h  seq_statement.cpp  seq_statement.h  statement.h
irtree/tree_wrapper/: expression_wrapper.cpp  expression_wrapper.h  statement_wrapper.cpp  statement_wrapper.h  subtree_wrapper.h
irtree/tree_wrapper/conditional_wrappers/: and_conditional_wrapper.cpp  and_conditional_wrapper.h  conditional_wrapper.cpp  conditional_wrapper.h  negate_conditional_wrapper.cpp  negate_conditional_wrapper.h  or_conditional_wrapper.cpp  or_conditional_wrapper.h  relative_conditional_wrapper.cpp  relative_conditional_wrapper.h
irtree/types/: binary_operator_type.cpp  binary_operator_type.h  logic_operator_type.cpp  logic_operator_type.h
irtree/visitors/: asm_visitor.cpp  asm_visitor.h  base_elements.h  block_visitor.cpp  block_visitor.h  double_call_eliminate_visitor.cpp  double_call_eliminate_visitor.h  eseq_up_visitor.cpp  eseq_up_visitor.h  irtemplate_visitor.cpp  irtemplate_visitor.h  print_visitor.cpp  print_visitor.h  visitor.h  visitor_struct.h
location/: location.cpp  location.h
parser/: location.hh  parser.cpp  parser.hh  parser.y
samples/: Compiler  in_4_checkpoint  in_interpretate_visitor  in_print_visitor  out  out_print_visitor
scanner/: scanner.cpp  scanner.h  scanner.l
symbol_table/: scope_layer.cpp  scope_layer.h  scope_layer_tree.cpp  scope_layer_tree.h  symbol.cpp  symbol.h  table.cpp  table.h
types/: array.cpp  array.h  boolean.cpp  boolean.h  class.cpp  class.h  class_method.cpp  class_method.h  help.h  integer.cpp  integer.h  object.h  types.cpp  types.h
visitors/: forward_decl.h  function_call_visitor.cpp  function_call_visitor.h  interpreter_visitor.cpp  interpreter_visitor.h  irtree_build_visitor.cpp  irtree_build_visitor.h  print_visitor.cpp  print_visitor.h  symbol_tree_visitor.cpp  symbol_tree_visitor.h  template_visitor.cpp  template_visitor.h  visitor.h
